welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:-7: error: not found: value arrayFront9
 val res = arrayFront9( t.getParameter(0).asInstanceOf[Array[Int]]);
           ^arrayFront9:6: error: value lenght is not a member of Array[Int]
    if (i == nums.lenght){
                  ^arrayFront9:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to 3){
         ^